devices added
